--- a/stk/static/assets/css/styles.css
+++ b/stk/static/assets/css/styles.css
@@ -20,7 +20,8 @@ body {
     background: #2e8d45
 }
 .mpesa-logo {
-    width: 120px;
+    width: 150px;
+    height: 80px;
     display: block;
     margin: 0 auto 15px auto;
 }
