--- a/stk/templates/index.html
+++ b/stk/templates/index.html
@@ -29,7 +29,7 @@
             >
 
             <button type="submit" class="btn btn-mpesa w-100">
-                Pay
+                Pay Now
             </button>
         </form>
 
