--- a/stk/templates/message.html
+++ b/stk/templates/message.html
@@ -24,7 +24,7 @@
       <div class="mb-3">
         <label for="phone" class="form-label">Phone number</label>
         <input
-          id="phone"
+          id="phone"{% url 'checkout' %}
           name="phone"
           type="tel"
           class="form-control"
